--- a/olymp/Olymp.csproj
+++ b/olymp/Olymp.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Utils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Geometry.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
