SegmentTree, SparseTable, unix->win line breaks

--- a/olymp/Olymp.csproj
+++ b/olymp/Olymp.csproj
@@ -37,6 +37,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="SegmentTree.cs" />
+    <Compile Include="SparseTable.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
