--- a/Olymp.Tests/Olymp.Tests.csproj
+++ b/Olymp.Tests/Olymp.Tests.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="SolveTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SparseTableTests.cs" />
     <Compile Include="TokenizerTest.cs" />
     <Compile Include="UtilsTests.cs" />
   </ItemGroup>
