--- a/Olymp.Tests/Olymp.Tests.csproj
+++ b/Olymp.Tests/Olymp.Tests.csproj
@@ -57,6 +57,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="MinMaxQueueTests.cs" />
     <Compile Include="SolveTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SparseTableTests.cs" />
