--- a/Olymp.Tests/Olymp.Tests.csproj
+++ b/Olymp.Tests/Olymp.Tests.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\olymp\olymp.csproj" />
+    <ProjectReference Include="..\olymp\Olymp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
