--- a/olymp/Olymp.csproj
+++ b/olymp/Olymp.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <ProjectGuid>{7719CB81-73F5-4FE2-8687-6FEF14989735}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
 </Project>
