--- a/FirefoxPlugin/src/manifest.json
+++ b/FirefoxPlugin/src/manifest.json
@@ -3,11 +3,11 @@
   "manifest_version": 2,
   "name": "CodeforcesProblemSamplesCopier",
   "homepage_url": "https://github.com/coffeek/olymp_cs",
-  "version": "1.5",
+  "version": "1.5.1",
   "icons": {
     "48": "icons/icon-48.png"
   },
-  "applications": {
+  "browser_specific_settings": {
     "gecko": {
       "id": "ya.kofeek@yandex.ru"
     }
