--- a/FirefoxPlugin/src/manifest.json
+++ b/FirefoxPlugin/src/manifest.json
@@ -2,7 +2,7 @@
   "description": "Adds a button to copy sample test inputs of task from codeforces.com as NUnit tests",
   "manifest_version": 2,
   "name": "CodeforcesProblemSamplesCopier",
-  "homepage_url": "https://github.com/coffeek/olymp_cs",
+  "homepage_url": "https://github.com/coffeek/CodeforcesProblemSolver",
   "version": "1.6.0",
   "icons": {
     "48": "icons/icon-48.png"
