--- a/FirefoxPlugin/src/manifest.json
+++ b/FirefoxPlugin/src/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version": 2,
   "name": "CodeforcesProblemSamplesCopier",
   "homepage_url": "https://github.com/coffeek/CodeforcesProblemSolver",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "icons": {
     "48": "icons/icon-48.png"
   },
@@ -19,7 +19,11 @@
         "*://codeforces.com/contest/*/problem/*"
       ],
       "js": [
-        "add_copy_button.js"
+        "add_copy_button.js",
+        "add_copy_button_protocol.js"
+      ],
+      "css": [
+        "protocol_popup_copy_button.css"
       ]
     }
   ]
