--- a/FirefoxPlugin/src/manifest.json
+++ b/FirefoxPlugin/src/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version": 2,
   "name": "CodeforcesProblemSamplesCopier",
   "homepage_url": "https://github.com/coffeek/CodeforcesProblemSolver",
-  "version": "1.7.1",
+  "version": "1.7.3",
   "icons": {
     "48": "icons/icon-48.png"
   },
@@ -19,7 +19,15 @@
         "*://codeforces.com/contest/*/problem/*"
       ],
       "js": [
-        "add_copy_button.js",
+        "add_copy_button.js"
+      ]
+    },
+    {
+      "matches": [
+        "*://codeforces.com/problemset/status*",
+        "*://codeforces.com/submissions/*"
+      ],
+      "js": [
         "add_copy_button_protocol.js"
       ],
       "css": [
