--- a/src/Solver.Strings/Solver.Strings.csproj
+++ b/src/Solver.Strings/Solver.Strings.csproj
@@ -1,19 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Solver.Sorting\Solver.Sorting.csproj" />
       <ProjectReference Include="..\Solver.Utils\Solver.Utils.csproj" />
-      <ProjectReference Include="..\Solver.Strings\Solver.Strings.csproj" />
-      <ProjectReference Include="..\Solver\Solver.csproj" />
     </ItemGroup>
 
     <ItemGroup>
