--- a/src/Solver.Tests/Solver.Tests.csproj
+++ b/src/Solver.Tests/Solver.Tests.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <OutputType>Library</OutputType>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
