--- a/src/Solver.Utils.Tests/Solver.Utils.Tests.csproj
+++ b/src/Solver.Utils.Tests/Solver.Utils.Tests.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <IsPackable>false</IsPackable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0"/>
@@ -21,6 +22,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Solver.Geometry\Solver.Geometry.csproj"/>
+    <ProjectReference Include="..\Solver.Utils\Solver.Utils.csproj"/>
+    <ProjectReference Include="..\Solver\Solver.csproj" />
   </ItemGroup>
 </Project>
