Directory.Packages.props

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -12,11 +12,11 @@
     </Compile>
   </ItemGroup>
   <ItemGroup Condition="$(ProjectName.EndsWith('.Tests'))">
-    <PackageReference Include="coverlet.collector" Version="3.2.0"/>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0"/>
-    <PackageReference Include="NUnit" Version="3.13.3"/>
-    <PackageReference Include="NUnit3TestAdapter" Version="4.4.2"/>
-    <PackageReference Include="FluentAssertions" Version="5.10.2"/>
+    <PackageReference Include="coverlet.collector"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+    <PackageReference Include="NUnit"/>
+    <PackageReference Include="NUnit3TestAdapter"/>
+    <PackageReference Include="FluentAssertions"/>
   </ItemGroup>
   <ItemGroup Condition="$(ProjectName.EndsWith('.Tests'))">
     <Using Include="FluentAssertions"/>
