--- a/src/Benchmarks/Benchmarks.csproj
+++ b/src/Benchmarks/Benchmarks.csproj
@@ -3,7 +3,7 @@
     <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.13.1"/>
+    <PackageReference Include="BenchmarkDotNet"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Solver.Sorting\Solver.Sorting.csproj"/>
