--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -3,6 +3,7 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="BenchmarkDotNet" Version="0.13.1"/>
     <PackageVersion Include="coverlet.collector" Version="3.2.0"/>
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.5.0"/>
     <PackageVersion Include="NUnit" Version="3.13.3"/>
